--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,8 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url(https://fonts.googleapis.com/css?family=Raleway:200);
+
 
 html {
 	
@@ -24,7 +26,7 @@ height: 100%;
 body {
 	
 
-  
+  font-family: 'Raleway', san-serif;
 
   background: -webkit-linear-gradient(90deg, #1D976C 10%, #93F9B9 90%); /* Chrome 10+, Saf5.1+ */
   background:    -moz-linear-gradient(90deg, #1D976C 10%, #93F9B9 90%); /* FF3.6+ */
@@ -34,6 +36,9 @@ body {
         
         
 }
+
+p{color:white;}
+
 
 .navbar-default {
 
@@ -100,3 +105,5 @@ color:#91CDB6;
 
 
 }
+
+.btn {padding-bottom: 10px;}
